--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devStart": "nodemon app.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
