--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.1.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "mongoose": "^5.7.4",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.3",
